remove plex from kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:BfJFJlReujvZOZ5u01Pmr3ntDURsK34A9a8kAMLvNajgraImCXtlKvfQog79UXVVPG/OhiN8TgY+YfjI9CNIEpg=,iv:NJ+qUZDOMR1jsXcC+SoT2YefVCriRXuXbBSOz17SZco=,tag:DycCOa8Sw4KPXulJYnLyVA==,type:comment]
-#ENC[AES256_GCM,data:SM5cxf8MT/pQdGblL2zSEeEVIowKKCgL+Vz6iv5rFtDbsh+hamotT9zGpSo=,iv:puEOx6fxvz9TdSdgb2AteukS06NGn9vntukmqTwTziQ=,tag:51kSMiwu32C91vMTztEFhQ==,type:comment]
-VIP: ENC[AES256_GCM,data:dKGijvjZODCkgJIl0g==,iv:xGeOoIT+TWU39z38NM38Vyzh1Gpgm+YSkJDuoKIV7DY=,tag:QVN+tgQBBjyfmDX25rpRrQ==,type:str]
-#ENC[AES256_GCM,data:CTUQ+603mtLQYr4t/HU49vpR0I6IeOguRCRs,iv:/OAjof20EQULFXVp7NyrKU2gfwQaCHMbcwLrhs26UlQ=,tag:MuChFXU5cEujC3aYplBrhw==,type:comment]
-#ENC[AES256_GCM,data:xPf47xlMDwrgbYzs5/QtPcNjPdUmHU5o8FoTfFyri8Mab97uMOw09pGVP6WnbbsleFjOVH4WnXAKvOWUrW0S65iHPwiJLuXvLTSIYSvt0EMKNyFVUzmaRrw=,iv:CAPPO3vxhossueu3A6Odcncr3l0foNzExz8IE9LsSK4=,tag:nl3f3dKkujyG+jn70dQKhg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:H6XallC/J+Mdo/LkDLg=,iv:PU2bQFN1AV6JNnqqqCGbABPP4kW1JxaAV0/LbUzGpis=,tag:4MuEHIifyX1xq78WTN6K5w==,type:str]
-#ENC[AES256_GCM,data:qxTkL8qHH1fSrbvr/NJZYKKGDRyJtTcwLtHscGwIZNDXaw==,iv:S1e+imRnhra2bqvNCzlTyOoGVk1nBaX5KC7OY/YZDak=,tag:C/Gm+4BNEgDzGmWsebfrTw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:JhTGb03PDojIu2B2Qw==,iv:JEMuIwGTX0kRSLEoxHiSqSDNTnecS0QeO4+1Ryoocbw=,tag:3IFZZ8SpHUQqmRpsOi+0CQ==,type:str]
-#ENC[AES256_GCM,data:N1jGBDskhRyDUk5Y9OV48Z3bOKFzoWvSZk7slO2bAt4/5B6ttYUhxt/kksaDr+k=,iv:fqH4TYw63w7G5unBxQ/kNqD/9lpNl2hz1YGLsdtujjk=,tag:XpVW5QbxzFfmyglQi1CD1Q==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:X+aD6roiMc2AT4k/stEwYc6rY2RBAxl2IKYGYtQCJA==,iv:T3DPFUH1KTd1WqIg9BiA0eTB8U0QdMxc+p1vqrPdOLc=,tag:chuGMjjMqw87yUmHPrFGTw==,type:str]
-#ENC[AES256_GCM,data:5WhWdoBEycrEiHgwX96eYYV9f1yJUwaaiGXdofWh1lOhUfHxCu1PIMLA6EHSLorCGcXHy2MupluRlJWj1Rz7FTWcjH91GlpvmRKReVdSnP8SbQ==,iv:GhnyW8hMY6PVC9Zvz3+PCeslNoP4aMXImeV/5H2pStA=,tag:M4la/JC8Xi4/Pmu04vlMlg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:jqTeUx8YOrtGxkIOKuEC,iv:WDjWg//dn9toAJV6rpM/Z2gJ0/mY+5wQkuA36Qda4dI=,tag:3O4P1qtfSXMUAAVHIQihqA==,type:str]
-#ENC[AES256_GCM,data:CrZcSu99B+omr32ymq2OEUTRkGP5spZBYMvF/B0tnrll,iv:VCWQVDB28pY64pWA5njqF5YY24WHH3AtllNf028f6GQ=,tag:6RJ+Kx6GQxGd+zm+WIceRQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:uBZxabNGhHll0rtRnJVz,iv:Jbe6GEWwFCTQFs19LomyTGIqZ44vZUVnTC7lc2G0EXk=,tag:CPYONabMIXX8tsza2NitkQ==,type:str]
-#ENC[AES256_GCM,data:sj2mv42e60+mSQTXgWhW3QltwKNt7Kb2BgWXY/z8s3RsPLFJs+PqntkuhlANyWAO49qkRDzgnF4gO8ueXmW5qzSwM8Efc/Wn5fdjRd3OOAc=,iv:xEQFbIW7dXGuDm8rp0FkTjwGb76HEGSD33xTrx5vLcA=,tag:NZYiphkxD68tygdmjvCD4Q==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:3CDdmUN7YpHZnMEQeg8r,iv:i/4QJ2Ot4X0cScl5Ct9wVpFm+F2uB+nzn381JGCPrpI=,tag:4AFAGqC53z3Wyw68+4rgfQ==,type:str]
-#ENC[AES256_GCM,data:0JvfZQDwqgf/iPEtTZZdMTNiRIvn3E7LagZ4sABQn9Zr2Q+0X9F1Yn5tL08qd54fJZ7Zp/YCDHa13zJ/nZOajzSvZnEMfmG0SROg0iUnlVwkiEXkEvoF,iv:EB5/QX49YpbuXo/2rnDgWLBxzmRzzFoskUPYTK4U1N8=,tag:nnwYvL2FToKCq1FlO1wmFg==,type:comment]
-#ENC[AES256_GCM,data:Y2sbgo8ECy9GaHETmfRKPzTY/u698yizcDWKIM4M3zndBX+N49eqA2uy+Tpi8KQGie5hAlMQs0ZYCv2rAQS2fhACOlcTE9IxkdtqdV+kPLZuyjVVH4NBG/J8N5rP2ww7Sp3d1sDQ16TLurGX7+jvcHfQG594+YE50xXtJw==,iv:BK5KoXBlYITEossHYIwXtCtdsa7YycNOAqVoFjbC0GE=,tag:yR3aUGaCOASQnmv8mAgUgA==,type:comment]
-#ENC[AES256_GCM,data:kKbYtAULw/DV7iw5GIaaRarPCNX8oHzJjV5IQfpSDlaTLoFdmNEPMDzDxu6BvXHfjpgTzawHPkBL71VbEopA5L/+l6BDRXgoNVw1nhzypWc=,iv:zUyKep0E5hFKkfXnxszewyqMzcvotvrwj46MDOzYa3Y=,tag:bNthRvv7tTEVVUmoM8/veg==,type:comment]
-#ENC[AES256_GCM,data:wPVcT55Bcj9O4KnGaLGMkzhDQQdsaLKPPJJCy7pYMeuVaVfP29jtllMhHG1GdkHMS2+b7dRI,iv:zHSk+T9yKiaEaZHqJCB014O+8KuNZfydcqZq2YgRWvM=,tag:DveK/LTxCVvZvURqG9wMQA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:+P8ekBEB5tqNMmXk,iv:UjRcpZkppguOJM/95KrrbEhfZwjfRFtTXUOASgHd3+0=,tag:4VLa8lUp9TBZe2OIwF9Cbw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:yF1VBNNvTnCM8mQXrB81ti8=,iv:4dugh4GmdYnPFkKeKLz2Bg0zQj2W2Wwk7OUiR88VQyY=,tag:cxXqQ+QX5D70YsmaeIQrBw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:5eSSmh0Ef1GPWyKC16MRwzc334FUfFGsvixE+D8XiCE=,iv:J03MHehopKkCgow+0+kermguEmbap+iabi7jKyp8enE=,tag:RSSpkjH2pn9ARYNiG3XP8w==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:8+Lx9VQJ5Z/ehPgJ6KSS6dsLXfamqWKmrhXbvpI2/vEntZAtIaP45A==,iv:DZ1jukrBnxSoVYbaeBlsKSd+3AGNntA4072B7mgh6W0=,tag:9IJm31q8GvzsqU0k98hLtw==,type:str]
-#ENC[AES256_GCM,data:rA5PX2rbfyNyNh/GSMpoTcKMY1MPdJxo9HHMuHcZ8wNgL39XF9IZdP3fwOfGVfZLB11H9DopEDLt1u3rgeIGEQ==,iv:TnvHu5doWcbLLQQg+jE6+1k/INHEqtltOKmy6RBPWLY=,tag:3RN+t5RHQK467/TvdFgtdA==,type:comment]
-#ENC[AES256_GCM,data:tHJ0l4ikNjV7J+eB9gxoEUpIGSJIaCrY/7PZM0wYzrZ1yBgfX/k0P/fGzqNBCqWyXYaNiY53V2Y=,iv:Gk6IrUCarTPTOR6VugNHfstGHD9pQCYOGOahxnhUUFM=,tag:BwrrnjvrCaGunBSaL4u2mg==,type:comment]
-#ENC[AES256_GCM,data:Nf8ZvWqpD7u0Pu6dvGEcTlSbUEcNMCPEHg==,iv:mV5hW5IekfIr8wP4aCM3Eql1vnyg8v0XkVvgzMz5uhA=,tag:kzqRfKLzSUS6F5/L/2VD5g==,type:comment]
-#ENC[AES256_GCM,data:Sbi79t+2SM6bTJADkXGy36UxM6KCQ/J3LrRQOZPCEugv0Sbm3low1zXc/o1HAVpQXvjDXmQj2utjPB28hq7osjowgs6Djd9Qm4ZaTg4=,iv:6cDnmXZDGPuajLiQf8HRnd5vLb3tWpggUHOP4Qm8VR8=,tag:qRsF7Xtkrr03wV4524Ff4g==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:+6tEvdE+Py3eCFXZR5kyxiq8g+rlXAUwRgAG0QRQzwMwcaYVzrnXVS7iM2hXsFAe,iv:7VSeIw8x0Up1me+5+Vs4ttPoAd3sTiQNg8PtK2AQml0=,tag:kr7il/wAV36PsN4KL7/Duw==,type:str]
-#ENC[AES256_GCM,data:HLjNaPrrmc0u0zI3P5BXefrW8y5cXF+BnvuwhDD24Y1odX/cmi/6zZPxzyINtzSXpZD42PILqOXpvenWmK5VMglh1UiuHlI=,iv:b1NzBApcHeoS8YnDMHTOedkWFNTp58n/w0Ek9G9LzCU=,tag:nnpRzzMPXBj6slGjI+KA7w==,type:comment]
-#ENC[AES256_GCM,data:9v3fjXSEU8z2yWMRva9LRosoopbFXzT1xEmlYKMkFWuupno79NP0xHzpF7mN85bZxPgkivoP,iv:j0QkaFfqg0lFU6KIs/UrSq0PtFwtDFSmK0nDP/32N5M=,tag:3BwcAj/9zuGCtUxSbscoPQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:6HKAiAL2jA==,iv:kq9B27EZDll0Gh27Jaj6JmYyD/ghgW6nmHQczKNB9+Q=,tag:SPnPHOI+H9RN9fmDjIiVjw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:v8JmK5lde3Vayd/GSqQo0JW9Bgc=,iv:KXZil5yt6JmQRI7G/Cg+HSbQRWDCBMYmVOXLR1yBU1g=,tag:6yQAm2lLKssMUYEIcKSK1A==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:v+OdwxXCHE2UMBo=,iv:YbO98oo4ywZgcuBiv/tjOmfVaHRtFoxPj2j0Ly6H0dg=,tag:Od44tcl3ww9kC0alr3EJSw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:+NNizvMPPCzem87Wya91,iv:hKm4wL/BdtmIRNPy5sL2C9xjloDOVA6CBdDEGrx7SxI=,tag:RZgoSo0QL8xIlx2tA9XTAA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:fylNGlZ9+J8feyGdo/XAJUR4TQcpjy+h9g==,iv:AlopbS85Xw18TF9CncTc1RpDNOxpINm4yH6HXtco7dM=,tag:iHLIS7bho7iAPeSLOhp2vA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:AcdN/+IN6avfikXD3r5XiGOsTvbOmc39,iv:EYN8LZHiQWk7OEgpAAp3ydB3A09QFu1Ia2H6wx95uw0=,tag:WSA9ji/08XBG0ieRYKrRyw==,type:str]
-#ENC[AES256_GCM,data:rioTcQBCeBqtH/W0YqQvrUbicVDLEtFE67XgWfAwjVVYXWpE8N8=,iv:PknpK4JdCqhE/ALHksF4eZdw4S/7ndqhFMZTjlZBq+4=,tag:7TJwRD4ml7OPalkDPXoonw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:QVfz8tNchm0PyCL5bJXwxQNtRsY=,iv:+30JLM+92IrrRwn64RmjzX67e3Y3icePE/LHsYICi4M=,tag:qNhNmXRegi5Jm6LWcVOhFw==,type:str]
-#ENC[AES256_GCM,data:/kWE7qiqVnfmVL1Lc8s=,iv:+ibc+WE/7Tb1RnO/8KEerMx9UqcusSaQ6bTcLKjUq68=,tag:wqzrOODrMIWq0V+3LwAULA==,type:comment]
-PODNET: ENC[AES256_GCM,data:6J7Y8ZIsCfYDu4Wjvg==,iv:J69wPKFhPVkkIyScazVu8vOOTR1SDEAugcP+mbrqc/I=,tag:r/kfhCyeWVI3j991WfJuwg==,type:str]
-SVCNET: ENC[AES256_GCM,data:NgEWFu2etjou1+OXzg==,iv:BKZeYIB7kaq++rhdQI8pvQmbONl0syIWJ9gDqlYZcQ4=,tag:bif7t2e6TFpyTppBAvWasw==,type:str]
+#ENC[AES256_GCM,data:2ubpEV/7V7iKy+nsqofQ0ESQfe8SIVcrxDpJ0imUvmBVITruM3RdXm3iH3Xm5KNSaPe6REhYW66VU34vBPg6LqY=,iv:++MHNP0rbcKpyjzQ3NcYx3huOrgPDQoE4yaJFWfOA84=,tag:NQznNKEGVzwJltZ/VSZr9Q==,type:comment]
+#ENC[AES256_GCM,data:PbHxdSciB8ofpeGlTZeAhl2q+jmlMdRD6SOXsVNUQs5fs2QJrNobLDY/PS8=,iv:hQVPoH2gu2ido7rkyGleqFIa5COt6uI4XEftG12aZ/M=,tag:HaGAbaDzB0WAbWa4RO8Wvg==,type:comment]
+VIP: ENC[AES256_GCM,data:7jRP9s4YPXgm9nfghw==,iv:egXqs8IE+YXqb5FnRjK/zwvIuOQ40txBiTTViZUmxuQ=,tag:mspGZYjKNC6AV21sT258kw==,type:str]
+#ENC[AES256_GCM,data:DzjKHYW4WPefW/aL6rQe9cY2BbSSLGGB/xVD,iv:ueXgaeInscZ0hmg1PnTNHd9Ff1WPNnP57Hev4ctTF64=,tag:Q0Qhcv8udXTxDE5LhHGO/g==,type:comment]
+#ENC[AES256_GCM,data:L6lm+wLAwBRllei4BM6zQJvXpqOT4tazwPKGa4jSdr+6WW6ieOjapHubcXj/Wd+ae5toiND3P4OZXwtgUZgNySUyZegqU6k5B2ZshOPKx32sjfBJivHnQNA=,iv:b18pJXjChdNJEjCVQtGEtfjlKEBwd7NVCUFLJsC1Pe8=,tag:RM7UpBhdfe6dEjTK0L3uWA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:nY9zbSfBrhLiVjFFoyM=,iv:at3EdQY8Z+AtGj1DYdNQLcy/0Z5royZpyELdz99H/uc=,tag:t+oVQal71xFy/zDB0HN3QA==,type:str]
+#ENC[AES256_GCM,data:SEFJ9UEpRrOivko5BDxUIcFPLZRvRqpaiQ4MHEdv25Zw7w==,iv:yeB9jIFVKxlSqYvtFY+mUUb2Mropy+y1eA2XHLf2wfI=,tag:AxdNGhs8TtKrYuOxNaDkZw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:SNlbUncRZkK2NSw/og==,iv:CJERhtpFia6YKQk3F/CwS+6dOZThGgtZqKqXWYnj1S8=,tag:QRvCi4CQH5XvOO6F9WHi1w==,type:str]
+#ENC[AES256_GCM,data:vGO7i1duB0ir2WrrrqusxcFoXaOUQTKIjlieS+hYP4q6wBgowRs/haq3j6Fne44=,iv:AmXyIPCaymdz1sb9xWOM1en3MT8wfSm+PL1UNP2BCCY=,tag:Bj1fYBhV0TLcz/qblcFw9Q==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:nxxjp7V94JaIxV+Sst9rGCos8dY1Xhyi62fCx94rAg==,iv:9y820Ox65HnkZlQ0wAL5n3DsCLPrPVDSUHNjz6BxQgU=,tag:2NVHS3331sBwFV+QjbrhpQ==,type:str]
+#ENC[AES256_GCM,data:xREjVTakqYAHpEuT72+RRxd+PCtCeQTXuuVh53Gmz8eIucjIHQZeBrRfHMcumbQ1GstGES2WlAR7wMi5nkHQWTjzXn9pENDzdPLbt+ZVomYWYA==,iv:wyq5b2kEaTFgxK5ma9ePYHlPO5yd1rkz8zf80ztmcgE=,tag:2ZUGer43Lv0YHZeDC1yyVQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:e7Q+U1ng9eIWDQEZeq65,iv:7/k3+zOS6jo7Og0rL5fQWp45qYsCMpaq+y7Mjt+UrcE=,tag:cvbH7YxkPZeNuZPThLGtYg==,type:str]
+#ENC[AES256_GCM,data:ZfNsKuMcEEHMpYUqyAmE3xtHnL5Nlg6ehwzUGlnBsUZX,iv:AHcRKOG2PQ92hogZ8Jc5ePFEexQQIMjgYX9GlJHT/2g=,tag:aQKV/nSrzwwIKycpPUeX4A==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:otxC3cuLUBJZ5XGw54Fx,iv:BchSvpe69+B0nPC/M0onemqM/YTK3P6uuul6DJBR16E=,tag:Zr39XWQzhkB14IpuGkTm5Q==,type:str]
+#ENC[AES256_GCM,data:chtdSHEEj6JnyuQDrcern5VvsDh9o3VdTv5ksmyxP7iLi6ko/JRkOb0gUWzsCfEWgTg3k1StS83Pc6/ekGILsTmgx76RH1Xdl10HHHs4wrI=,iv:23aX4C8+Y4ShtJhNc3l97v3/mQe5YGOj9MCcZqVO9gs=,tag:ZwtGIjerdzsLWELI7mL6uQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:3tAwaEl6lv6LXMqgUluB,iv:9CznS0U/NSpTrd4J7mcve7aP4aUKMCHAWXtDQvwlyPY=,tag:NkpGHr5/LBd6l9MQlotcJA==,type:str]
+#ENC[AES256_GCM,data:+Lzst2RJ/5ig+Hg1ZS4gKOsJKB2tE3O7zhotyML22s5BJcoTmB58iwvcrlSSQ13Mz7ZtngjXz+hHjnGQ8DhX6Cel9+6r5jKeZS8VqVkk3j9tZPpm5wAT,iv:3byvKr81CPbxrShUS79baOY3KIsUu3XFElTPGtjvj8E=,tag:E4iOyvCnmEP6muWUrcFceg==,type:comment]
+#ENC[AES256_GCM,data:+nIuTlDYz4sdpgYBIEbS1LJVXbIcywZyijmDRbmmg9WgymDwNPtEMQSVnJSMvy3WxsKcsM5vNxcpuO81l1YSkjbJl8Y7GBlU3S+B0aAskbb+banYvPZ+e+Bwdj6PMXFbYhlnmp3PIbUDJTdrWAKXkedjOzT800bESCAkMg==,iv:Pa9aLmP5WRD5xLK2+HJzuCVkle2Zq8/DaMTv79m7RpY=,tag:WjuzCCp+B88BWKw5wMVytg==,type:comment]
+#ENC[AES256_GCM,data:p4oANS52o+Do9ZTNyIrYBQlOwRWHiTOjQEmHlWeINHMDOVZDiy6SxvwHjDfRskkSMdUFkEKY/KrVIqUuJJxd6t0KN4uMKq6gew5oJrha6pE=,iv:POJUsgYaNDgexC9CgCaDcPWisKV7q6qn4EUAk10XNxU=,tag:W+nSt6XkXG/8CVaBf9Rerw==,type:comment]
+#ENC[AES256_GCM,data:Sv+X+hlqYA2hxKWiDr/2jUAXVPeEl4gWMkKybViDyt/ih34L+5B9uf1D8PTwh6dJa7sWh0uN,iv:RFabuTIId8Uxhz72nqRwX0qwYeDv8qkxJ7e0cBYDPXo=,tag:/HezlTk7qrTMgzh7ONyIfg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:ArI7U2r+E/S1jWOM,iv:62mvNpU3JgRO5IZovMauR+YiJBC1KDdNdk1vCBvGhxM=,tag:ll4jxgj4RrHISkESHCdEyQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:JvtEaS2b9ez68WIHYtapNlU=,iv:qz4fiWTv2bn7zdn1xg06ANgXj8RyDBYspcCg9DXciEQ=,tag:g2AJoF6Kej+G2i8DlStwww==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:Z2oTBbYSBJic9uYDRegewnBR97H9VpMzuSk0s9NRkYg=,iv:KjT3I0Y6D8a8HFVJ3J+vdieGrea/Dd4lbgoylgzQYP0=,tag:4F8+vNQQ/DumPe/suQosYA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:RwzNvpPyy/zPUr45/eQABu8f9UBVKnL1Lh4v3ocsveGRSEIcUDacdg==,iv:yqMZe3CHT8kjNnthUUqjwJd9YM3xqKYXnee8P/vI/1U=,tag:vE0PtlnjwtpcfvtrFurRNA==,type:str]
+#ENC[AES256_GCM,data:99hOH0Z5zN7q1yUjmVY9I0Cfoc7lowNgbxvlT2lzRSnoiEAo2nnpoVtDw4cQ3euQGDuL/Gyw2qywo1+ARhO/1g==,iv:hVp/lDUmbhtIsmOYjsV2IzOC/G1mkYugwiScFG5cXIY=,tag:W2F1K+2Jg3+KuoouUYPBTg==,type:comment]
+#ENC[AES256_GCM,data:Gfz6zO9b9wem7QY4sl2n6Cu+hSucYafOWpaqIBLsr4bHsNROGnWGNgdrb5yc2J4FQVxqRxQKm7Y=,iv:+8nEnVlnb2OAmmBveSVD0tw8wUHkTOc7Mbd3cdi5ZQs=,tag:Of/nNOPWZvrbQjET7lC61A==,type:comment]
+#ENC[AES256_GCM,data:qKG6M25DpvtUd3SxzbiXqgHOL2jP3a1eYg==,iv:5sR68Oszenfny9dMRrW6c/VnIFgZbYD4gqix4iTbyXo=,tag:EhNOdxH4QTTTdvqIl2zeag==,type:comment]
+#ENC[AES256_GCM,data:PTJvElmbNYMkXlR8eAvY95OKWEYF/XxRJG2N6hfyRuJhSBXZFAvr+uoGwyr1kL0yxFh4NGYBM45dDu5ncfyl8KhppEXQVox9xO2/wpc=,iv:0SZvq2IM6E3dmaAV6YkKE7Am1ZY/m0K4GQCPBYBxsEE=,tag:+ic3Gr97M5mkqoqyosU6DQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:5jZBLXJUs4k13YcSJkbBErfx8Vatki6KaAq9Vby/qjzSF6rEEZqWixpAHhWvKHls,iv:b7ZHS2Sb+yp1ka92QokH7Udid6BGTthciXEJ9me0vTo=,tag:WsKg+4wJyDOHMQOWvY4K/g==,type:str]
+#ENC[AES256_GCM,data:Np59SSS7NhA9gIUV3ZexYOifKprp6mOfeMg444urdsoMP8dBfJUmDCN3VCPRET73HGtCilo0P1EJQ2z32Ca+Yi+A/UpEKnY=,iv:Wit1DZiWRjfhyLL18zPl2NVbMhtXY0eul1/YiSqqRAg=,tag:ROv2H4kDKrP3ebnEpTz6pg==,type:comment]
+#ENC[AES256_GCM,data:cKoDTMwgdwEMeu+BfmR9/1STwEFwChFzUc9Kk3wn1QcfXniVNIZaX/idWkbzoWPLe4bteSxJ,iv:z6ZKREm1pO9zhUJ7xLH1VO5x7A3xYHWZ3kYDnX7YMnI=,tag:38ix6uAnWV20JNHvoMfrJw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:mDasaE3pDw==,iv:LnMlbWtR7vDqbkxPfJbu0qf1RAqzwoxDyi9Je401KlY=,tag:CNdnEMid1VokWTDUEWhLUQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:C6TOCKN9LONX1X4NSdprRzB8z10=,iv:ufefg6wRiY9naYNRrkn5QBvtCLdOJyd/9yCpgQEpMGA=,tag:PiJGe5gIxOF62kjBgm4U/A==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:valggl19wJ5+Eek=,iv:PFgwkm3wTjKkOnDm9N/scnmLz/IGnW8S38cWLIB1TF4=,tag:7s5nvL9F8fnrI69d21PXwQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:G7lWHPjDb+bfWlDd/13G,iv:sbL+oudRzT83bRmvZxwYwZ9m4sJePh2dz3BndNhViLg=,tag:AuDroBEJb+HADKvRqGgaOQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:0O5a6jPVQh/fasVQ+UWIg1qOONFWBuSF9g==,iv:1hbzUs3Xp6fm8Ztll9DGctOyIKfR6Yth2DtfoTOFhWA=,tag:8Id38vWJQONf78GmdTUNBQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JjwBELsi9/pS3A5ByeJXODhMnUp+MUBJ,iv:SliewKkmJgHmO8XJcvdJ5uWdlDZNlG5FfRzYu+Kjca4=,tag:JoMdH6f1KmtD/kquu9uVCQ==,type:str]
+#ENC[AES256_GCM,data:fuXjnfcKGlenw2/jplP9CB7Mmz+8Xxtwu+mhd8fT2sTzJ/yXm6A=,iv:Oki1VGFndI263EjYEheKLSRyqKk9HPD+v3X+/fNGJ+0=,tag:u9PH4y5s2QiPTgH01fpX2g==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:BoKZYze8MyzXOYVsWaMwm28kYlw=,iv:s2aMmZ747XCDIHJWE558lt6LRr6j62JhW8XPJAEm6HI=,tag:gd3cMFOSumYsndI/OI8UpA==,type:str]
+#ENC[AES256_GCM,data:YjlJ7WLeG8Afdd3Zi1M=,iv:JTAInbTFU92gvHoo/qTc82r67WdMkFnlnQgjZ8+TKE4=,tag:66Gx83j4EX+C6/zrk4ZMjw==,type:comment]
+PODNET: ENC[AES256_GCM,data:GTDjKAIqta71OX4A4Q==,iv:kJQ0LFVrQOCKqHw0Hzi28WVFhhLuHJ2I4Xv+U0V7b6o=,tag:dlfaCo0776ddRl2SdT9F1Q==,type:str]
+SVCNET: ENC[AES256_GCM,data:rbywuHlTdCYbnnrgUw==,iv:HsmQnhvbuFZnznPKrinhKh1KMNf2CYMQ7lXuE5wUe+8=,tag:/EQGmJLFTWwfT0kqr0s29g==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMmtpVEZ3bXMxS29sMGZN
-            Q3BqczhmcG1GaWJBbGxsRjBkbk9IUThVWEdNCkpPc1N4YXZVaG1IQ1ViNkNuWUUr
-            andLSlRiR2RpNEIwR1pkYkJqVHFRVlkKLS0tIG1EelU5Z1owUnZSaWQvaTcvSDdX
-            ZnFYUHFjTE9iaDdwQXJyUDltK0pOTFUKWMt12hKXbnjjqUqJYH6Xpqx/TDxDBgdx
-            6JHtDfIFtqtgnjIMlaRBiJNrBgfVSVrOdM8TypkLdd8VeSgBvn8DOw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5SXhBdExXanA5RUZHUlo3
+            aGFyVGZaWXVsSkxNZ1B5SDhqM2RkNGZVK0NZCnBVVlh6Z1B6UmR0MzBSV0paU1kv
+            ZmMxbnp3eDhSWnNNQTlQT0puL0tvL2MKLS0tIFhwMGZEY0RXQ0ttQ3JKclV4NGNy
+            NnFjaEc3cEUvZkNJb2ozYU1CSWNXMmsK5uG2h3GXBOWJKgE4yXVTcr3uOukyDQrI
+            R7qY0SlUc96X371F9KJ1mJntwt72geYmXvtj/EvonAtK8HxWU1cy1w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:41:07Z"
-    mac: ENC[AES256_GCM,data:z7ykmzl7b9t7G4VwNpM4OvrB5QTRRXAl3yywN255ANY5Wvo3oZI9zkavRlWuj+Xgw6KNZo9vGfPK+reMg2sDjksWZPNLZBTfdCRgf8E9xv16i8AGt0M36lSulV9nMMEZNYkZ3tIGztJ/vb+D0vxTtZoZ4dhhl5AjyAav/1rbguw=,iv:sIPELdyjOipr8BYEQUM5uByHIcS8xwvEIcfiGqTQWa8=,tag:sXp5JpJMQQCt4kQnFxBf2Q==,type:str]
+    lastmodified: "2025-01-10T23:46:27Z"
+    mac: ENC[AES256_GCM,data:MQr2f9eLkTTRx130Qv8PysZRinShR4+5eEHqcR6deax9eOKaNVWVabJtxCgbOarLYdcx9YM0tKYzAi0Hg6L5h5CfmfIJDRiVUXwDUt0wSD4Bz9vGyQ/Mi9nvqgF0SGlDyMjl7ByHUd3qRkQnn2x+T7yMDLmXUhCu95Rp7tBW4PA=,iv:nIgyr2coDf3ui62d0i5zcSoEC6tjhn09oEXorv/l0oE=,tag:38M3EwwmSqnCwUuJr80/5A==,type:str]
     pgp: []
     version: 3.9.1
