--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:aqPXcWShNGNAlSpnQsCTtmygPFIE08Y8pSQ7VL+osEsONCn2E/6J/pIMGdHgYiixCUGG2zy98y4Yv3QgM55TzMg=,iv:ZnnCr1Z0H7UXG2t6MJIQ7MR9E1awRr2tm4lg7ctOl+I=,tag:QGfWyN68LK0L24jEjYFoYA==,type:comment]
-    #ENC[AES256_GCM,data:5Vaojn3c1HZPZe4UMsf6jT2wbsBXD8x2/rNilpxdWvLD4JJIejcS1DVhyhQ=,iv:OsBjNasI2pamf8adLk4jGJIzDGslVUlOZ84X0X/NrDY=,tag:v3azbhXJ0fRyuwkjcMbykQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:iVu7NiD0uZ5NyYLbQw==,iv:JwMZP3avcTr1Dkjfdu2xlL0xLuDzcahtCTw2D4au124=,tag:BNJd4fPE6U+n6inyrN/zWw==,type:str]
-    #ENC[AES256_GCM,data:RwiZSRFVLWsbb2ode6n+xPfVFtot13vvR19H,iv:7BsExoLzEB+GcPuLVeCSsXdxG1fh2SS6D+zEPQYXp7o=,tag:JOEFB8MMw+h4xGWZzV6evg==,type:comment]
-    #ENC[AES256_GCM,data:lVrUxLl25KXXX9q6bgLKkv5IfGDDucQwZIFI9Shy0wbovKhvFpHWa7RfpV0wxBoP5IY/ZLqE9amVEyADtPa5h89QIKxPnUYTBEP8Aquytv7xtmoPJumDb7Q=,iv:odpriKTdN6agD1sF31LQnbLOutWuwdffqHvuKhnovDA=,tag:Ikt+5PEUJOc/DDAwNY//xQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Pg+05lv5XsWiV0buqPY=,iv:egrG3GnF9awkXXoKwRzDWVitJdy279R4/zJIHF8q3v0=,tag:K9AkuPZO4D5eu2wiJcROVA==,type:str]
-    #ENC[AES256_GCM,data:6MD2gbc37bV5EnEIvRdn0Zyu7ZHZpiuS0jVlNNyXqVjY6A==,iv:wRdlZQasq4ahi4TNL8Uh/VL2sE2yl9utffA7sbcId64=,tag:h7c4HioWUKxFUSDjXTkg0A==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:45whwOQVYP1gLjNoKg==,iv:JIREvi/Ohk72KZOhKWGuTn1hn376VhE3cZOa3uMG7Hk=,tag:ezh7FNSmNEhDTVO25IvSTw==,type:str]
-    #ENC[AES256_GCM,data:4ca2gJHO+jPeWPYHvJe/DFvx2UcA4dsgLN7JH+kNxbR5Oeuxdj01cTiLoo4jGEg=,iv:kXl3azCG6807uXwpYPKmIZ2N2fHQTBXZbL15zTH22js=,tag:wHdcXIMhwWjKW0hgtFt7dg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:0bXYphoEy2y7O2ar8PCycdhVlgnHZCeDiUlwncR2fg==,iv:KBRWBIxcxsZjpIENBlG6nGN4OgKteb5BOogkE1Fbz/w=,tag:tgkhDe2SxnxO84m9ZCNuPw==,type:str]
-    #ENC[AES256_GCM,data:hDDKUfP9ETwU1T1X7AB88g60vaHcVT7lKNBIbmoTHznEXlsI42zj+A7l8YLkGmr9CTUoeZQQgjYnrSFLOXV0DUmQckuPpekqGIdBjjmLmtFS7A==,iv:wCutpDY8mlkDchtJbo3SpeU32tiOLcP+alf8Xt8TAcY=,tag:N4T8ow0W+kRq8npQSgloyg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:zP5+dd8Y/n8jcDogTTdx,iv:SRtwxbnRJSwqDFAAM14X1QNRusx95z4eiGQ4fuTqxC4=,tag:kCqJbuAJbjWpIk16+BjtHw==,type:str]
-    #ENC[AES256_GCM,data:T4JyvPLk6Nkw+JhaSgmwOBnKt882xTvNpX1tD+qwCaqZ,iv:Th2nSKzROa5S5Sl5weari9JIY9veSAdXyAl7bKLMyB0=,tag:XApKtBZeNrAi2U/hv39c5Q==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:CtuJgNzj+mCkmmdjHDXC,iv:BQumjwEmpBLQpK8lmfhI2x6H/KYnsV7DqJw2kUWf4rw=,tag:KEkOs7Om7yQRpgZ2UgpQDw==,type:str]
-    #ENC[AES256_GCM,data:yKcgXhMao1Jjb48MOKL0r8ZRrxJp+mj6w6RGU74eTIQ6iAuLC2J19tvDM9dwFLasVXgZHWdZaslvuJYS942k1Ve2RZXjs2D64UsD2k/QiTg=,iv:11fuc8R45HoGnkTUAhZKj6oIOcCgDkLOoS4QPddDGas=,tag:PiD6IdjXY5Q0qLLXci5qaw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:CX2DENoSQeL0lXp6Cmnm,iv:HrJHIlx7DWfubsQaErSnqbR3k6MuVCrzxFJNHjj5DIw=,tag:gkVBCPjm8oO3bHYKyqxpvA==,type:str]
-    #ENC[AES256_GCM,data:pcjY/u+7oqrZOy+iq5L727Ll2F3IYbowA83dDxEnnXfcFPXiCXcH7eNV+NmLibxiPgkaVGy8+fcZB97mr+rEzfAOiAGRklR60sURO+edXFqhD6qYTFmr,iv:cSnOql4o5EeK/sLUGJzglzBpsOx6CXK5AM9KPH+TN3Q=,tag:dp0JmbzREwhI1XrExENPKQ==,type:comment]
-    #ENC[AES256_GCM,data:Z4wIJpkebwxDGqCsHuLNQwhX5KagRe04Veap9iA/kM0CjACuEy3x5ymUATsDQRzzPnbMFZX2JWeVeYjZkC3e1XNV1G8wrXDbg0qIDsMJEm1v55gPYOBxOL0qUpp6K1IdL8jS2hAJ5Pj7LdWkUZKNJ9A/wr69iPs3dlxxEg==,iv:Bl8Wg3sEoKot+mmjOCrCbNGLDvc1md1dJHhRAeetC3M=,tag:NDy2RilGdLsCZolmnqk8Ww==,type:comment]
-    #ENC[AES256_GCM,data:/eE7vVt31Bx3tDL4gqeThrAzyrCUIT9iKWKTyjNYkOeMAS22hF22DZazkeOS8lcalEJ6dBcRjUWCPdoCrGBacbYPmP/eqm1GAi2yHdkre/0=,iv:eXBfklvvuJBJbvVwVnbwTGFvJ9FWVolZbIXTBk9+lLQ=,tag:JhI1wjmOovhFNSbv677S9g==,type:comment]
-    #ENC[AES256_GCM,data:3cr7AFBXU6WxjEvfr5nkmreB3h6WlNuO7B8BCZmK9gKld7HvgNdeVkT9fZoMhNjTp3Dvtx6/,iv:t5PpdO5rH5w/jB3pOMv+Cf1muAx5J8100iKd3nPKtkE=,tag:KRfU2lN80DgAqNw19n4Nhg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:SpNgIHTTW7cjq6Vu,iv:rwIorVscfMDfsiiw2x9D7v797WdoOJyUjeSi5Vdt08k=,tag:Pd8mX01x75W3LNa1A02csw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:txIzNYDKwEz+c1LwOVolACo=,iv:mCGZf8EfCD29bzYuuI3TSYhxQBbttvMGxxVCk4T93Lo=,tag:vQxwuQZOGU2WRf0LFwKkXw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:n+MTWeX5PaQZanhgHEiqvKcyU1WtY/oaMm+no8lvbRE=,iv:Ju3FfVkiuK/jHaqsJRT3p3F8JsWl9rAS+pgV+9fV6V0=,tag:e4mkA0/QvsjtJ8sFq9JGdw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:JCYujIwzbvdQaA1AZM6JNeUFTtJTP0jGI0AoxbutJo2XiHwyXOyv4Q==,iv:L/xdzmwKiTmF26RFjaJiJmaSYGPxAEoXe1KlDP8x2J4=,tag:AlpxN2e9+p99BNX9TCoKBQ==,type:str]
-    #ENC[AES256_GCM,data:0UsIUJj5fsl4nfAIgVcjDQRoS2OOh38WMjz7l0K89yFpVHhBLeXJ9Ui1l9NhywkTw5vQKKXM+HPvTBqrAUo6dw==,iv:Yhn5R1S4+4BTzqwiNSwlardlDGuEJBGz/O8Q673tXUo=,tag:9sDrRqG7VsUXAfkoW2pTiQ==,type:comment]
-    #ENC[AES256_GCM,data:CLP7UE4yCDQPjOuofxsSWmOco5ZF9BnUFZ1Z6a9BY0ilPgrqVorQqbZDkE7aEgH7ToszYBTtHDQ=,iv:4m27jM4OiO+i6gymky0uNL/8EFbfNPF4PWqRFQbb2tA=,tag:LugsuYON2oyCZd4krBIMSQ==,type:comment]
-    #ENC[AES256_GCM,data:siAWvEr2RiaxT/1xcI+/g8yXPsjS8DnxEg==,iv:61Bkuw1VMPQoiyUc/lXNAfTUcEhclgO2M/Sa1qndl/0=,tag:8k9/1HkXvzKXZXuGrweECQ==,type:comment]
-    #ENC[AES256_GCM,data:J8v4x7zh9GipLfjxUTLRyPoM4RI080kh6jWcxXk0xamo5MSKsUxwuWVKA4RJjAYAgDxeYqbY+jMjgK0gVfxdIafQgyueBnIOaLlhVek=,iv:ZE5gzLVK8wETIca8VM9WK1XMS5VdQlH7Bn7o6pDkhtk=,tag:oGj29v5A15ryXdIX2xoNbw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:p4lQszi/KO0ZqPE4LE8rnt5vRSuN6zSVfOT4QzD21+LWc4+2FvSASYfJgHNEkiNX,iv:bgySfyxXV2LyaEiV76AFSsFWjEsbZkZlOcgOGe8n+jM=,tag:v/cN8574kyhrgBkrHYe4+w==,type:str]
-    #ENC[AES256_GCM,data:7ajNFtXu2ooNxc8odNGHjCxfBd3w0qcOVtk7TGV+7ZEO+5ywx5VSxS6Q10JXq3VFOpaYFYs+zHP2eqIjXHus+Kv4A2Qkilg=,iv:ook5QdSq7nmDkjNOiJQDZTWGXmK9TxR9hAO7xjlKi8Y=,tag:Lr9haVt9kaVEVz3o62FQjg==,type:comment]
-    #ENC[AES256_GCM,data:30wKo8q+3+jcclA0h7N/2jGwjK1tosUzSMqQJPUXInAY7YCgrI8MrMCYTzG10BAEeUNWUbTS,iv:806peBuo8gNdnZDHMLC/pg+5WlFFmdR15mGCsHNYpnY=,tag:vrpsGSfIimCyklk6rvhFFA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:fnnaS35EmQ==,iv:+3wmOk2VDEp+Z0hFWZIunA4OVpdfEz2exN38BE1uJMQ=,tag:r+TYLKib8BxRmarXMyG7qw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:dviSx4ZLf0b0UC6LshGFvPpNbc4=,iv:ivQrR3qMi3VpvqCBcgRNbNhvWZdSGTGw2YsjM2lvnbM=,tag:xfbw23OyXIg7QmAr7TXFtA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:EYSHxdgHwDiNx1Q=,iv:x+nrW6P8Y7SCrwytHyqwxLix7OLJGDpt7Za6oBVvOQs=,tag:TKE5ryYFbVxdqpweb/Ug0A==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:60/zepsg72lijaiaAowk,iv:mWwW5qM9oRXrpdTx0+YsdsBKNIYFjYKqy1YHzF5HwKE=,tag:KUre0LzfCthtd/ZG971cWg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Q4gVsPEUNW7g3Sw5KnHnVO6Jj3+qBnnrbQ==,iv:vNBJStvfEBdabCN2fxljcx2/V3gDsK03F+ZFmQYr35Q=,tag:RBy2xoDuq1PRyTWgkai2bg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:YBOms10T9js7X99Oc2ikGy61vkc8Mmft,iv:dU9pL99+cX0eD36mSivPI/F0CsD389wjGZB14TSh6XI=,tag:sj9vYrSEkFHtflLKYjXc5A==,type:str]
-    #ENC[AES256_GCM,data:xFdda+/Ng/jlnL7F/QRHZH1tK3b4XjQPiulbVTIVSx4MQcQEniw=,iv:u7nPuASQ8l9Jn13mveLFgncINBFZ1c/kO+edIICoRjs=,tag:uyzJ+7VYzoBv65yNZKkifA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:PGJZdnpxxcgAj+sHPnusCpjSOww=,iv:Bah8tta1h7x4BtUcjYSaPqokbcuVgT25xCX3/NKyU4k=,tag:BdetEJPAGh2PLFtLHbDMNA==,type:str]
-    #ENC[AES256_GCM,data:FcRusaLA5fC6F5yA6HU=,iv:corsTBtPlaGt8wOz/RavrE2NZABdkPvoAmnpS7WNlOs=,tag:3S+D0pCsxWuDlPK5H0zB2A==,type:comment]
-    PODNET: ENC[AES256_GCM,data:PTtFla30qKAiDjdBSw==,iv:l6hPrf+zv5Gjk5FRDTV8z0EDWHOFLc0QEKGa7SsEYio=,tag:i6KBad1UrWH0mp4p8UpJRA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:B/6vLeVJEc1oDS7N7A==,iv:W4L6RuzgoVN1/bGZkpOV5Yb9Wf+xDTnTCHNplFPKAO4=,tag:mqdaLExHGSoXjVUr3MOVVw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:2OIRKg==,iv:WfO6WHgLLcEu4g6aHfqd9WjFC66yqsjm7DcNyWv7sOM=,tag:erqJWtOAA4N8O1u+gILlxA==,type:str]
+    #ENC[AES256_GCM,data:LTIme3/jzT9P3c9ytjPWp/xaLeYwvXnnom2zFULSYwcszBnaEDMQmGFEdyqdbKjFC08aL+AaKoc/XyvwvVdUT2U=,iv:PzeJYFeI5O5csxnKeA3gqgqdeOA0jr8bNFKkIKeTLtE=,tag:bd4rlOPNaOIxKfRefbDoew==,type:comment]
+    #ENC[AES256_GCM,data:eTFHToWu4DYrxhu1OhbaHDgDiGfcpebbVXjJoLZFDNlO37Y8zgDFr3uxums=,iv:3fsVzYMcw7poEuZ5YwPPTHshtSrMa7ckz0O+g8KMNuM=,tag:Kf5LavzNgC/PaxGwviCZfQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:9N1dOo/RXKVbzxGhxw==,iv:juixDXT/MOwCOuYctqncRdiG+cZs+u/mZNj0mgDS/kc=,tag:xSTe/5TPpNWjfereQLoaHQ==,type:str]
+    #ENC[AES256_GCM,data:9oCpWhPg9hh0M1r+tBL96pm7JxVdADBCjs2F,iv:s0EoatIYocfe56VsIBfgpF1JbGzKMe6YRykKTBPSuOo=,tag:JdjDS0ROLKJp5zDX1+t9jQ==,type:comment]
+    #ENC[AES256_GCM,data:Ki1r/bmwl4d8jgGmXxfGedTPIkLeoZNKQkCGrDEF6SJQNiQPxqDgEy/fGqN46/cwYCQJISTP6r9+aKvJMFKgMTgWkU6ceoHZ5v1THsz2g9vxs2QRMiC/QmI=,iv:w+HLChQv/GUtu3a1G09MRCPqs8Vec82rYZdY3BMa6LU=,tag:uj+fu7UTUtsAv/RC/udDqQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:YMFjPYWnVf292mX770E=,iv:CwL0yP4upS0YQ143KWqwta4G4wAFNVv3rLMb8KJO67A=,tag:VUZWogVfoF3PBvbiG+59LA==,type:str]
+    #ENC[AES256_GCM,data:hxOGKRWHnPcPU8V8KHSsU03tUiEvz3MlzsL+fnN356NSaQ==,iv:XhIdOSIykQPfYntki/nYIc0SV86KTnfnKAgIPYyIiQM=,tag:jXw0ACIu4ZX+t1vqvmwy9A==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:s1xgfOxQBPo5GB858w==,iv:SxfiU0ag7s6ziqbL2xjEuTS1xJTPJ+vCKE99fQKn+KA=,tag:ARbM/4CvChs7ltsgKfVt8Q==,type:str]
+    #ENC[AES256_GCM,data:wBkVBaptfB2AmHyph5k6OeJbKabP4CAkGdzDImwdfZ5/OWtwZpLFYMDE85ZBP5k=,iv:WWN9ZSSHivLIqhUcJuh1v0Euixdf27YavXAZm9xiCyg=,tag:IIinPzDO2nM8+1/dulTb6w==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:FtjdF1V2YJ6uV94yUsx8ZniMlYqo1jmlRXCpLsfkLw==,iv:Rxirpam3EQuzEYzwf5+PJ0W8FkpPhc6ykJsXZ0ecgbg=,tag:UinSSCZaI1oUWTc0q/N+cQ==,type:str]
+    #ENC[AES256_GCM,data:ODJL3IR56P6Wsht/V6Rar9k3svszk0bM8YUhew9oZVCywCSm29NHK9mF+f+vSD4wVJkZm9ZjchKWHpqE/mNm+gkuGXMX3W6Kay0kTS1FBEv8og==,iv:RobBVIVpI1m5XxOGQobRC34Cmy73nZFFLtFQI9Aygnc=,tag:2doSooMdYaJMnApj/IMWFA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:UE92Ox8i8HoIiP4HLL6p,iv:/SqNXGlEGH902P2YMTgQOH3AVxOdu8v27xR/bMB4oxs=,tag:DQghdcUje86zlfowanDj0w==,type:str]
+    #ENC[AES256_GCM,data:k6xx3//4s7ozMne43keR0+zAAYHgU4UpL8ah8HK1MBY+,iv:NH0EHyCUsFA6rdeCKJhg0XXd2m2KDZrdjpxLZAQsOE4=,tag:aReRVe+XrT9yQpaC1/rqmg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:GFcu4YUTgCwy/DGX19Vk,iv:KTyY7sDvKK5nQkXnFzZASbRUOyr96JjicXHg3sDXftQ=,tag:zR0hVDhYd8qwZLR/41PEZg==,type:str]
+    #ENC[AES256_GCM,data:+cJUTODPJPcPolnF91yviDnt+h1clYwPhvfOBzKfUzo4Xr47UOAuH/4EjpR3Ex4z16BaO9cTUOWS0W3/FojvMWWd4pa9S/j2cqyuFCBkFJg=,iv:NRRl7nSsRDcEefKRCIw8JNdJe5mxcihHUwRajYnh6ZI=,tag:oHRgG/zLawc3gku59Grf3A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:TR7UVAUsAaiDg/RkLHVW,iv:hvn7E6wjzV9rTUMLdT6rFAASwUOpd91YBxXEFmiVIG4=,tag:1Zn7ff5jvNuP3UX524AYnA==,type:str]
+    #ENC[AES256_GCM,data:cPDhmBapijqja79gDSBage4PQCWDxq41mZRQYXE8hxCeN9VyNSRY6dxCa8pgx//kBSrsRvx+rHLY0aTVn+q7PqoSeGNZmM6xBV8XphSlAMABxejYbexL,iv:Rdag50ZGcQSjjpvFjF0m12AlHYH7Kbl485jDs8HVqZY=,tag:IQxN+H50MyWh4Y3KyCoCVQ==,type:comment]
+    #ENC[AES256_GCM,data:bXGhFIgU56tBTfJVcN7lGq28AdSx8oNcKojnRxEgrUF3pzfpdj1PTEABmPdCPHSWcxPxgOClXzF1g7wK+RijnkuZ0orr9jhG9g8xws1VtMw3cwHe8pXyKPJutGfboLzTHChgQYulZn5Qfbr1dxSk8Pq9mf/jqv2xODy4/Q==,iv:a5rI9Zi3IfavJHaO1FQZSk9cWfPYcNcIgunKYX12nXE=,tag:1mJ3xeXHhgmNTBVlifkWLA==,type:comment]
+    #ENC[AES256_GCM,data:0Gd5btNPkOsofOc/nEB1QqD4NpBNBXFuSuorr3MCtOa60udMl2ojZiPhXJ8/ZYWo9pokrn3dvhx56N9emgVyq8tBA8UgxjSJozUocAEgxWk=,iv:VMMzsewq2Ke4Nsg56p8UuvkAjRbFXoQ2WSRcRpsOsZg=,tag:PGfol1cxFjhxyjXXfPQfjA==,type:comment]
+    #ENC[AES256_GCM,data:T4rXR3wHW+6Hy37WVgdueLaKQk6N6lOpqbIywRjw6lAqV3lJfFcHyDvjAyzJY1u5wa/EJULt,iv:y/DQETA6pjxWWsWSeZ7Wi62CuelL6COyZf7YwaeWgdU=,tag:kyZSDwb+wsidPZcU1rRGwg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:dGu1/s+qZ8KvwnIX,iv:Ybhkssw2QpVYnY+qlIUQBiV9Heocp0xw9aqTksy5qqc=,tag:9J7GZQyYF0Mk4md7y5E0qg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:gMDAjU+Fbu2WYQAZUM2THpc=,iv:OSzFvkYj/xFZh7b54JIEXNG1C+GJRxN6hvTME6V0ll0=,tag:DPwP+WLO/kjyenTINd/OzQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:wGlOTTckrzL/MjySauyMk/KUBZnvyUaiYJJtkp926+c=,iv:dNlbW/TKBsSKbs6Uq2SEh9tMjvAuguxcaVJkuplmkWA=,tag:E7fXSe1GkOQtGwjl+Zs57w==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:xWvPVbksXVTxGkf4a4ogzugp+6OPe34IGnEC7c7o+YH9rR7ru04q4w==,iv:pZgZl9LWyFSrRF82WdwJJM3dXBMvhwSLzg4khvFGwak=,tag:ThjZ5448e/WL7wR7TKoEJg==,type:str]
+    #ENC[AES256_GCM,data:8i0aJhWlgf7JpVpUe+thD2WQRnIQoGCxZRXwMMN1H5XNxdt0CCC1BYFxAeA+zSSljxvrzd4luwbWYVP3+5kHQg==,iv:4GFHQK3bAg1k9dG/zg3dtJI4svUJ2kTkIohrGhSoIaQ=,tag:+vuYczVeZMLlJr2u0PtbiQ==,type:comment]
+    #ENC[AES256_GCM,data:1kvpp/+wj8DV/IhjUbmlf4Sm51u/MZwc3oiBKMSxZY2h1ZMBE4i34PCCRwhuu/c3RSTkOpq6+WU=,iv:POiQCdCbDx2nV7QvQA4fgWV2lfvoRly2r94nOhid018=,tag:M+Z89LaW1tro/5PjHBwk1w==,type:comment]
+    #ENC[AES256_GCM,data:lnFhZvGHsv6J4Ve9LTYAK/pUqDKfFC+hQQ==,iv:6EnDnwec0GNbmsa3q2CPgQkizBeTX8ti60iEJ/gTrPk=,tag:RN+UbgniqF/o3i2ytvqGvw==,type:comment]
+    #ENC[AES256_GCM,data:mpvSoI1g2TstHxP6QFxsAy2Q60ibBFwNxbOokAYBYmr+OovuJLP7teL725l7iCH21c5HzX8HCnB4TdiWcaeDfUJIOUZXGKAQGaByB1E=,iv:TEuyyMSb1qIMtoEKFFILtS76Kki1u1TC1IcyuYnO63I=,tag:2DuyHwiA8fgt4fAULk657w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:zevhmG219JzWHKG1s9XYGUlbDb1/Ed2qwF6jYXiGtGNAaHeJfTtvPQDHs36mwUs7,iv:/9+mkH8kg0/6hSp6iyIDX8A/9oh3wciVjLsLenmblRs=,tag:oySiCBEP7XnhrN07lr999Q==,type:str]
+    #ENC[AES256_GCM,data:siTOiM9+zHptEi0bMXAh4WsKG+Yjl09Zt+r4ghGjXjC7GeoW5aHDOR5g57+zVmauR+2tht4SUQRItRVMdPBf2n2mf5Dj4ys=,iv:bhl9BnEPhPbnP4secfbiPwMlmp6dBMyPhCH4zQf+deY=,tag:qtHgrnhlQ1kmcD2ECYj2HA==,type:comment]
+    #ENC[AES256_GCM,data:ty3FicHEQ5uLITe559o1JDOll1fWHC8Y7Xthp3LB0D9TWyanu5xyvKXZ8wX0Jicjjl7n8RZ0,iv:TYBM1xlrzTuX3sIGVI9QciNnMfFwxJxgLc8J7cYNNh0=,tag:zIuxEb3XNEiCyS4XTt9Iyg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:yxfAPbOmSA==,iv:ASKQF8HOopah8J9ugz/lFPUnxfvUfIbT012cbMSifbo=,tag:3uRdvmSpsnQ+YO7hQnfIJA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0M09+IkgH9C71kGaTJy8OSQAGrs=,iv:nv+phbYduXf5TG3rvcnRTkoquk/lDUOXosb1t2WdPgo=,tag:ThDpDqCKOcEIVWsAT0jJLg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:e5CNEg42qfETJr4=,iv:qwlBl0kaKM/vGtZGXkcmQEGHfuobecIgYFTGvAt9b8U=,tag:qmCy1AaGPgXTm1PUeIvGYg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:94s9aeNGcm8lIqnah3i8,iv:8V0RzJZOcscCSsDFu11Lp8f8TMoVRzjAwpUpLHHAETc=,tag:o+hOUm0dg2z48sMdULb/zw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OEJ9U8JoJ0EPwRSkRnNCbS1KPV1sL/sknQ==,iv:Aw9mIJg9l/EcS0PHIIlGlrmuGq0QpaUA46NcaKBOYZc=,tag:2HgWnXDz0I/7P2gNDk5MdA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:uDRsgj/Y4/yntVX2TS8V+mcqIJXIepXI,iv:+lxQFxq9eMUBMiak7Tp3EWcvjeF7CyJhse7x5foHggE=,tag:7mm2eDZ5IjEexNNRbVgviQ==,type:str]
+    #ENC[AES256_GCM,data:82wPBr4D5p0g75Co4a1SnPLNycWEQcaFAvqspTZDMWKLdrir3Uk=,iv:rmQj258uBFk43rWITJ7hWiSG0ogecx+6UVgWnlooojc=,tag:ak/mm6CT4bGSaW7VUmq4ew==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:tQw0ubFEy6TT9AKC7ocV4hHgXQI=,iv:/55dUMCE7gz5x7cqE9nWFH7ATvSDyzx6cztMSed12dk=,tag:IIvb9HoZo7uM7FIzzPMZJg==,type:str]
+    #ENC[AES256_GCM,data:+CotW0Up+NI/BcntL4w=,iv:YaZwCvCW9CP1oohEmq8OHJdyhATJgxJCnfaqQC24upo=,tag:SCIsqPeInTBF0mjBVxJa+g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:ZK8BzsGR9wboD22x7A==,iv:lkQML3doNt5jBNKswan5Px9OCie2JN0Y11KFBZ+VdD0=,tag:jIxY4KogljQmnKuuUYhOKg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:EFkQ9FFjZq6749lwMQ==,iv:12s5cf/ox9uQRoCyvYBmuIK7crQQnarhTfL3yk1oXYw=,tag:ughJBRQHuPxragt78atc/g==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:8dlqfw==,iv:Inl9xUx109cWHKt9HYRbpYkNr/Kn09n7Cq9ewB4vaps=,tag:UBvX7cdSllCHTiSmF7kdDw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjSUhlTDVsWUhzZlRuWVJy
-            T09wV3paNHFuTXNsNnNXZkNxUUxTbjlLaDFFCjhjQkxvc2h5bjEwNVpHKzdGVkxl
-            eWlFelVLRkp0c25NeVppT0tOQ3BEZU0KLS0tIDhrVDdBL0VrTjgyVEFVckpVcUEr
-            c1FCWGhKTzBkZ3FIOWp6OTJaR2dPWnMKEFAFnz9v1txkIh1eLQRCUT3pg/kNWujX
-            I7x9hWPJTns7rl9Sm2OXpggiPRPsGt8f8YvdvLFYr+wbp2iYi1kIRQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBabkIvbC9uVzlzTlBWUWFj
+            VC81bFpPcExPWTgzZlFKc0NzTWZWUEg4c3d3Cml4U2FhRElsSjE3MnNtOHBJTEdj
+            MXk3bzd3NnRtbDFiQXpEY1cvU3k0bVEKLS0tIGlRNWFIeG5CaGFhdUM4SXZkSTlH
+            Ulo3anJVSFFEc2h2MzdPZmpnV1FPK1UKdhA2xQdlmz6PDH3hAbLx9x/Jr558PjKG
+            M5Y/uudNdUv17ffaZhqdwEmfUzP32QK9vzG8NK3kl8vTATAdr7KJ5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:41:07Z"
-    mac: ENC[AES256_GCM,data:VQiD3XcweJJzCRiLhl3TZkU8SWbgQsP5xGPdDqw9F627TYXuPm9wbcgx4+IDNKS4W52tCnGND+onExUyKZp+WcSGZpFqs/+Wl0IDKOZVYfH2w1hyEGO5YccJFZFCwXWeG3CgopEq0GqpwXb4iKRttUf2EXGGMBxDAB2W67EjnAk=,iv:6T+olD9QU0JXO6uSdIgiNYealmFeETcJSGcDRhdCMf0=,tag:kZwT7eDlYJGXQa2nCnDCMw==,type:str]
+    lastmodified: "2025-01-10T23:46:27Z"
+    mac: ENC[AES256_GCM,data:GzG2BPEc2OLQ4z8p/12wwlDWu6nUgt47VshQd5jrZmVFJwH9cGQ/p+In7zuLwbAl+EjqXXkp26IqV2ca06PHK7TvRHkDsYqRZm5lR8PrR6DRHq0IRb6KifVtdAiQrbk/qZtI2abk2pb/l33vF31dGXEAQonSHvs9KuFnH8M4AOU=,iv:eFU/TXgnhUCFNsFPow33wq0r7z2FyJN9Kzl7SWua7oY=,tag:L+eu/wvthmpHjAQ2VfV5Xw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
